tests/errors/int_lit_range_err/int_lit_range_err.c
#error int_lit_range_err:7:5 This type of literal can't represent the value.
#error int_lit_range_err:13:11 This type of literal can't represent the value.
#error int_lit_range_err:14:12 This type of literal can't represent the value.
